syntax = "proto3";

package go.micro.srv.getCaptcha;

service Example {
	rpc GetCaptcha(Request) returns (Response) {}
}


message Request {
	string uuid = 1;
}

message Response {
	string errno = 1;
	string errmsg = 2;
	repeated uint32 pinx = 3;
	int64 stride = 4;
	Point min = 5;
	Point max = 6;

}

message Point {
	int64 x = 1;
	int64 y = 2;
}


