syntax = "proto3";

package go.micro.srv.getPin;

service Example {
	rpc GetPin(Request) returns (Response) {}
}

message Request {
	string mobile = 1;
	string uuid = 2;
	string text = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}