syntax = "proto3";

package go.micro.srv.getSession;

service Example {
	rpc GetSession(Request) returns (Response) {}
}

message Request {
	string sessionID = 1;
}

message Response {
	string errno = 1;
	string errmsg = 2;
    string data = 3;
}

