syntax = "proto3";

package go.micro.srv.postRegister;

service Example {
	rpc PostRegister (Request) returns (Response) {}

}

message Request {
	string mobile = 1;
	string password = 2;
	string pin = 3;

}

message Response {
	string errno = 1;
	string errmsg = 2;
	string sessionID = 3;
}

